--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "express": "~4.10.6",
     "body-parser": "~1.10.1",
     "cookie-parser": "~1.3.3",
-    "morgan": "~1.5.1",
-    "serve-favicon": "~2.2.0",
     "debug": "~2.1.1",
-    "ejs": "~1.0.0"
+    "ejs": "~1.0.0",
+    "express": "~4.10.6",
+    "iconv-lite": "^0.4.10",
+    "morgan": "~1.5.1",
+    "serve-favicon": "~2.2.0"
   }
 }
