--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "body-parser": "~1.10.1",
+    "cheerio": "^0.19.0",
     "cookie-parser": "~1.3.3",
     "debug": "~2.1.1",
     "ejs": "~1.0.0",
